--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "devDependencies": {
     "eslint": "^8.28.0",
     "eslint-plugin-react": "^7.31.11",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "stylelint": "^14.15.0",
     "stylelint-order": "^5.0.0"
   }
